--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
 
     <script src="https://kit.fontawesome.com/ff7458e774.js" crossorigin="anonymous"></script>
 
-
 </head>
 
 <body>
 
 
     <!-- header section -->
-    <header header id="header">
+    <header class="header" header id="header">
 
         <div class="d-flex flex-column justify-content-center ">
 
@@ -90,14 +89,15 @@
 
                 </ul>
 
+
             </nav>
 
             <button type="button" class="mobile-nav-toggle d-lg-none">
-                <i class="fa-solid fa-bars"></i>
+                <i class="fas fa-bars bar"></i>
             </button>
         </div>
     </header>
-   
+
 
 
 
