--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <!-- header section -->
     <header class="header" header id="header">
 
-        <div class="d-flex flex-column justify-content-center ">
+        <div class="d-flex flex-column justify-content-center " style="
+    min-height: 100vh;">
 
 
             <div class="profile ">
